Update dependencies now ullyses has merged refactor code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ classifiers = [
 ]
 dependencies = [
     'astropy >=5.0.4',
-    'ullyses@git+https://github.com/stscirij/ullyses',
-    'ullyses-utils@git+https://github.com/stscirij/ullyses-utils',
+    'ullyses@git+https://github.com/spacetelescope/ullyses',
+    'ullyses-utils@git+https://github.com/spacetelescope/ullyses-utils',
 ]
 dynamic = ['version']
 
