--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ requires = [
 build-backend = 'setuptools.build_meta'
 
 [tool.setuptools_scm]
+write_to = "hasp/_version.py"
 
 [tool.setuptools]
 zip-safe = true
