Fix dependencies to pypi packages for publish to work

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ classifiers = [
 ]
 dependencies = [
     'astropy >=5.0.4',
-    'ullyses@git+https://github.com/spacetelescope/ullyses',
-    'ullyses-utils@git+https://github.com/spacetelescope/ullyses-utils',
+    'ullyses >= 2.0.11',
+    'ullyses-utils >= 2.1.2',
 ]
 dynamic = ['version']
 
