Remove dependencies from pyproject.toml, install in python_testing.yml

--- a/.github/workflows/python_testing.yml
+++ b/.github/workflows/python_testing.yml
@@ -62,5 +62,6 @@ jobs:
       run: |
         # run all the unit tests.
         pip install .['test']
+        pip install 'ullyses @ git+https://github.com/spacetelescope/ullyses.git'
         pytest tests/test_swrapper.py -v 
       working-directory: ${{env.working-directory}}
