--- a/.github/workflows/python_testing.yml
+++ b/.github/workflows/python_testing.yml
@@ -47,12 +47,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install cython
-        pip install astropy
-        pip install scipy
-        pip install matplotlib
-        pip install stsci.tools==4.0.0
+        pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #    - name: Lint with flake8
 #      run: |
@@ -63,6 +58,7 @@ jobs:
     - name: Test with pytest
       run: |
         # run all the unit tests.
-        pip install .['test']
+        pip install hasp==0.9.5
+        pip install https://github.com/spacetelescope/ullyses.git@cb81d444e881d0fb37ccc53f3e49d4fc52c1ba5b
         pytest tests/test_swrapper.py -v 
       working-directory: ${{env.working-directory}}
