--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,9 +59,9 @@ zip-safe = true
 
 [tool.pytest.ini_options]
 minversion = 4.6
-doctest_plus = true
-doctest_rst = true
-text_file_format = 'rst'
+doctest_plus = "enabled"
+doctest_rst = "enabled"
+text_file_format = "rst"
 
 [tool.ruff]
 line-length = 110
