--- a/.github/workflows/python_testing.yml
+++ b/.github/workflows/python_testing.yml
@@ -40,6 +40,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-tags: true
+        fetch-depth: 0
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -58,7 +59,6 @@ jobs:
     - name: Test with pytest
       run: |
         # run all the unit tests.
-        pip install hasp==0.9.5
-        pip install git+https://github.com/spacetelescope/ullyses.git@cb81d444e881d0fb37ccc53f3e49d4fc52c1ba5b
+        pip install .['test']
         pytest tests/test_swrapper.py -v 
       working-directory: ${{env.working-directory}}
